Revision history for Perl extension PGXN::API

0.11.1
      - Requests should now all be returned with an appropriate
        `Content-Length` header.
      - Added the `userlist` URI template and the code to generate the user
        lists to Indexer. It's set off at the end of a sync.

0.11.0  2011-04-13T02:25:37
      - Fixed the search API to throw a 400 for invalid queries: Missing
        query, or a query with a value of "*" or "?".
      - Changed the search URI template from "/search" to "/search/{in}/", as
        the thing to be searched is required in the URI.
      - Made the regular expression matching stats URIs stricter. It now
        matches `(?:dist|tag|user|extension|summary)` rather than `[^/]+?`.
      - Added a `.html` version of the spec to the API doc root, parsed from
        the MultiMarkdown `.txt` file copied from the mirror.

0.10.0  2011-04-11T23:41:16
      - Removed PGXN::API::Stats. The same data is now generated by
        PGXN::Manager 0.11.0.
      - Updated sync to properly copy the new stats files from the mirror root,
        as well as the new spec file.
      - Updated sync to update the root `index.json` only if it has changed.
        It will of course also be created on the first sync to a new doc root.
      - Changed sync to load templates from the mirror root instead of relying
        on those loaded from the doc root by PGXN::API. This is because the
        latter won't exist before we start parsing the `rsync` log file, and
        may need updating even if it does exist.

0.9.0   2011-04-06T04:18:53
      - Requests for a dist, extension, user, or tag URI ending in "/" instead
        or ".json" (as in "/tag/pair/" instead of "/tag/pair.json") now
        returns the JSON file.
      - Added PGXN::API::Stats. It's used during sync to generate stats for
        all the objects managed by the API (distributions, users, extensions,
        and tags).

0.8.0   2011-04-02T20:32:02